--- a/final-template/index.html
+++ b/final-template/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <!-- Title and Links -->
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -9,14 +10,23 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <!-- Style Packages -->
+  <link href="https://fonts.googleapis.com/css?family=Yantramanav:300,400|Libre+Franklin:300,500|Work+Sans:200,300,400"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+
 
   <title>Final Template</title>
 </head>
-<!--  -->
-<body>
+
+<body style="background-color: white;color: black;">
   <section id="image">
     <div class="container-fluid">
-      <img class="img-fluid rounded-circle mx-auto" src="https://pbs.twimg.com/media/BtFUrp6CEAEmsml.jpg" id="profile-img">
+      <img class="img-fluid rounded-circle mx-auto" src="https://pbs.twimg.com/media/BtFUrp6CEAEmsml.jpg"
+        id="profile-img">
       <h1>Name</h1>
     </div>
   </section>
