--- a/final-template/index.html
+++ b/final-template/index.html
@@ -22,12 +22,13 @@
   <title>Final Template</title>
 </head>
 
-<body style="background-color: white;color: black;">
-  <section id="image">
+<body>
+  <section id="head">
     <div class="container-fluid">
-      <img class="img-fluid rounded-circle mx-auto" src="https://pbs.twimg.com/media/BtFUrp6CEAEmsml.jpg"
-        id="profile-img">
-      <h1>Name</h1>
+      <img class="img-fluid rounded-circle mx-auto"
+        src="https://avatars0.githubusercontent.com/u/54823204?s=460&u=50a5809ecb99b50ea04ad830a9be4df586c64dd0&v=4"
+        id="profile-img" />
+      <h1 style="color: black;">Name</h1>
     </div>
   </section>
 
