--- a/final-template/index.html
+++ b/final-template/index.html
@@ -25,11 +25,15 @@
 <body>
   <section id="head">
     <div class="container-fluid">
-      <img class="img-fluid rounded-circle mx-auto"
-        src="https://avatars0.githubusercontent.com/u/54823204?s=460&u=50a5809ecb99b50ea04ad830a9be4df586c64dd0&v=4"
+      <img class="img-fluid rounded-circle mx-auto" src="https://pbs.twimg.com/media/BtFUrp6CEAEmsml.jpg"
         id="profile-img" />
+      <br>
       <h1 style="color: black;">Name</h1>
+      <br>
+      <h5 class="text-center mb-auto"><b> <img alt="img" class="icon-pic" src="#" height="35"
+            width="30"></i>University</b></h5>
     </div>
+
   </section>
 
   <!-- Optional JavaScript; choose one of the two! -->
