--- a/final-template/index.html
+++ b/final-template/index.html
@@ -32,6 +32,12 @@
       <br>
       <h5 class="text-center mb-auto"><b> <img alt="img" class="icon-pic" src="#" height="35" width="30"></i> School</b></h5>
       <h5 class="text-center mb-auto"><b> Date</b></h5>
+      <br>
+      <br>
+      <p class="text-center m-auto" id="profile-summary">
+        About
+      </p>
+      
     </div>
 
   </section>
